added Argon2 dependency

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>2.7.1</version>
 		</dependency>
+		<dependency>
+			<groupId>de.mkammerer</groupId>
+			<artifactId>argon2-jvm</artifactId>
+			<version>2.11</version>
+		</dependency>
 
 
 	</dependencies>
