--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
+#GENERAL
 server.port=8080
 
+#DATABASE
 spring.datasource.url= jdbc:mysql://localhost/webservice?useSSL=false
 spring.datasource.dbname= webservice
 spring.datasource.username= root
 spring.datasource.password=
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+
+#JWT
+security.jwt.secret = klj244sgdfh2344fgbxcdfg
+
+#who created this session
+security.jwt.issuer = Main
+
+#1 day of token validity. Should change that. Make JWT better and more abstract
+security.jwt.ttlMillis = 864000000
